--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Detail</title>
-    <link href="<%= BASE_URL %>fFavicon-from-vector.png" rel="shortcut icon" type="image/x-icon">
+    <link href="<%= BASE_URL %>Favicon-from-vector.png" rel="shortcut icon" type="image/x-icon">
   </head>
   <body>
     <noscript>
