--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Detail</title>
+    <title>Detail Framework</title>
     <link href="<%= BASE_URL %>Favicon-from-vector.png" rel="shortcut icon" type="image/x-icon">
   </head>
   <body>
